Added custom entities task to examples

--- a/specification/cognitiveservices/data-plane/Language/preview/2021-11-01-preview/examples/SuccessfulAnalyzeTextJobStatusRequest.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2021-11-01-preview/examples/SuccessfulAnalyzeTextJobStatusRequest.json
@@ -83,6 +83,46 @@
                 "modelVersion": "2020-04-01"
               }
             }
+          ],
+          "customEntityRecognitionTasks": [
+            {
+              "taskName": "Recognize US Regions",
+              "lastUpdateDateTime": "2020-10-01T15:01:03Z",
+              "status": "succeeded",
+              "results": {
+                "documents": [
+                  {
+                    "entities": [
+                      {
+                        "category": "USRegion",
+                        "confidenceScore": 0.85,
+                        "length": 17,
+                        "offset": 45,
+                        "text": "Pacific Northwest"
+                      }
+                    ],
+                    "id": "1",
+                    "warnings": []
+                  },
+                  {
+                    "entities": [
+                      {
+                        "category": "USRegion",
+                        "confidenceScore": 0.88,
+                        "length": 10,
+                        "offset": 63,
+                        "text": "East Coast"
+                      }
+                    ],
+                    "id": "2",
+                    "warnings": []
+                  }
+                ],
+                "errors": [],
+                "projectName": "MyProject",
+                "deploymentName": "MyDeployment"
+              }
+            }
           ]
         }
       }
