--- a/specification/cognitiveservices/data-plane/Language/preview/2021-11-01-preview/textanalytics.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2021-11-01-preview/textanalytics.json
@@ -141,9 +141,10 @@
                 "displayName": {
                     "description": "Optional display name for the analysis job.",
                     "type": "string"
+
                 },
                 "analysisInput": {
-                    "description": "TODO",
+                    "description": "Input for the analysis job.",
                     "properties": {
                         "documents": {
                             "type": "array",
