Troubleshooting model validation failure

--- a/specification/cognitiveservices/data-plane/Language/preview/2021-11-01-preview/examples/SuccessfulAnalyzeTextJobStatusRequest.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2021-11-01-preview/examples/SuccessfulAnalyzeTextJobStatusRequest.json
@@ -3,7 +3,7 @@
     "Ocp-Apim-Subscription-Key": "{API key}",
     "api-version": "2021-11-01-preview",
     "Endpoint": "{Endpoint}",
-    "jobId": "{Job ID}"
+    "jobId": "c0f2a446-05d9-48fc-ba8f-3ef4af8d0b18"
   },
   "responses": {
     "200": {
