Fixed semantic validation errors

--- a/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/textanalytics.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/textanalytics.json
@@ -210,10 +210,11 @@
         "EntityRecognition",
         "PiiEntityRecognition",
         "KeyPhraseExtraction",
+        "LanguageDetection",
         "EntityLinking",
         "Healthcare",
         "ExtractiveSummarization",
-        "CustomEntityRecogntion",
+        "CustomEntityRecognition",
         "CustomSingleClassification",
         "CustomMultiClassification"
       ],
@@ -2496,8 +2497,7 @@
       ],
       "required": [
         "status",
-        "lastUpdateDateTime",
-        "taskName"
+        "lastUpdateDateTime"
       ],
       "type": "object"
     },
