Fixed model validation

--- a/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulEntityRecognitionRequest.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulEntityRecognitionRequest.json
@@ -4,7 +4,7 @@
       "api-version": "2022-02-01-preview",
       "Endpoint": "{Endpoint}",
       "input": {
-        "task": "EntityRecogition",
+        "kind": "EntityRecogition",
         "parameters": {
             "model-version": "latest"
         },
@@ -28,7 +28,7 @@
       "200": {
         "headers": {},
         "body": {
-          "task": "EntityRecognition",
+          "kind": "EntityRecognition",
           "result": {
             "documents": [
                 {
