--- a/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulKeyPhraseExtractionRequest.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulKeyPhraseExtractionRequest.json
@@ -4,7 +4,7 @@
       "api-version": "2022-02-01-preview",
       "Endpoint": "{Endpoint}",
       "input": {
-        "task": "KeyPhraseExtraction",
+        "kind": "KeyPhraseExtraction",
         "parameters": {
             "model-version": "latest"
         },
@@ -33,7 +33,7 @@
       "200": {
         "headers": {},
         "body": {
-          "task": "KeyPhraseExtraction",
+          "kind": "KeyPhraseExtraction",
           "result": {
             "documents": [
                 {
