--- a/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulLanguageDetectionRequest.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulLanguageDetectionRequest.json
@@ -4,7 +4,7 @@
       "api-version": "2022-02-01-preview",
       "Endpoint": "{Endpoint}",
       "input": {
-        "task": "LanguageDetection",
+        "kind": "LanguageDetection",
         "parameters": {
             "model-version": "latest"
         },
@@ -30,7 +30,7 @@
       "200": {
         "headers": {},
         "body": {
-          "task": "LanguageDetection",
+          "kind": "LanguageDetection",
           "result": {
             "documents": [
                 {
