--- a/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulSentimentAnalysisRequest.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulSentimentAnalysisRequest.json
@@ -23,7 +23,7 @@
       "200": {
         "headers": {},
         "body": {
-          "task": "SentimentAnalysis",
+          "kind": "SentimentAnalysis",
           "result": {
             "documents": [
                 {
