Another model validation fix

--- a/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulEntityRecognitionRequest.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulEntityRecognitionRequest.json
@@ -29,7 +29,7 @@
         "headers": {},
         "body": {
           "kind": "EntityRecognition",
-          "result": {
+          "results": {
             "documents": [
                 {
                   "entities": [
