--- a/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulKeyPhraseExtractionRequest.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulKeyPhraseExtractionRequest.json
@@ -34,7 +34,7 @@
         "headers": {},
         "body": {
           "kind": "KeyPhraseExtraction",
-          "result": {
+          "results": {
             "documents": [
                 {
                   "id": "1",
