--- a/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulSentimentAnalysisRequest.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulSentimentAnalysisRequest.json
@@ -24,7 +24,7 @@
         "headers": {},
         "body": {
           "kind": "SentimentAnalysis",
-          "result": {
+          "results": {
             "documents": [
                 {
                   "confidenceScores": {
