--- a/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulLanguageDetectionRequest.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/examples/SuccessfulLanguageDetectionRequest.json
@@ -31,7 +31,7 @@
         "headers": {},
         "body": {
           "kind": "LanguageDetection",
-          "result": {
+          "results": {
             "documents": [
                 {
                   "detectedLanguage": {
